--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@ hidden
     <img src="./media/404.svg" alt="search-illustration-icon ">
     <div>
         <h1>Ops!</h1>
-        <h4 class="text-[12px] p-4">find out the weather condition of the city</h4>
+        <h4 class="text-[12px] p-4">this going to no where</h4>
     </div>
 
    
